[gd_scene load_steps=2 format=3 uid="uid://c7qtbanfhdcx7"]

[ext_resource type="Script" path="res://file_save.gd" id="1_3ovob"]

[node name="File Save" type="VBoxContainer"]
custom_minimum_size = Vector2(400, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_3ovob")

[node name="LineEdit_name" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Name"
alignment = 1

[node name="LineEdit_password" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"
alignment = 1
secret = true

[node name="LineEdit_password2" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Repeat Password"
alignment = 1
secret = true

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button_confirm" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Confirm"

[node name="Control2" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button_cancel" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Cancel"

[node name="Control3" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_changed" from="LineEdit_name" to="." method="_on_relevant_text_changed"]
[connection signal="text_changed" from="LineEdit_password" to="." method="_on_relevant_text_changed"]
[connection signal="text_changed" from="LineEdit_password2" to="." method="_on_relevant_text_changed"]
[connection signal="pressed" from="HBoxContainer/Button_confirm" to="." method="_on_button_confirm_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_cancel" to="." method="_on_button_cancel_pressed"]
